# ec-wifi-keylogger

./: .gitignore  README.md
ecdebug/: Cargo.toml  build.rs
ecdebug/firmware/: send.a51  send.hex
ecdebug/src/: CROM  cmd.a51  main.rs  patch.rs
ps2udp_to_uinput/: Cargo.toml
ps2udp_to_uinput/src/: main.rs
realtek/: fw_29.a51  main.a51  make.sh  make_file.py  packet.a51
