[package]
name = "ecdebug"
version = "0.1.0"
authors = ["8051Enthusiast <8051Enthusiast@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
x86_64 = "0.14.1"
text_io = "0.1.8"
eyre = "0.6.5"
ihex = "3"