[package]
name = "ps2udp_to_uinput"
version = "0.1.0"
authors = ["lennart.kramer <lennart.kramer@stud.uni-goettingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pc-keyboard = "0.5"
eyre = "0.6"

[dependencies.uinput]
version = "0.1"
default-features = false

